--- a/config/defconfigs/base-imx6-sabrelite.conf
+++ b/config/defconfigs/base-imx6-sabrelite.conf
@@ -35,6 +35,7 @@ CONFIG_TARGET_PLATFORM_arm_imx6=y
 CONFIG_OPT_TARGET_PLATFORM="imx6"
 # CONFIG_TARGET_MACHINE_arm_imx6_arm2 is not set
 CONFIG_TARGET_MACHINE_arm_imx6_sabrelite=y
+# CONFIG_TARGET_MACHINE_arm_imx6_sabresd is not set
 CONFIG_OPT_TARGET_MACHINE="sabrelite"
 # CONFIG_TARGET_CPU_cortex-a5 is not set
 # CONFIG_TARGET_CPU_cortex-a8 is not set
@@ -622,6 +623,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_gst-dsp is not set
 # CONFIG_PKG_gst-ducati is not set
 # CONFIG_PKG_gst-ffmpeg is not set
+# CONFIG_PKG_gst-libav is not set
 # CONFIG_PKG_gst-omapfb is not set
 # CONFIG_PKG_gst-openmax is not set
 # CONFIG_PKG_gst-plugins-bad is not set
@@ -685,6 +687,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
+# CONFIG_PKG_vdr-plugin-vnsiserver is not set
 # CONFIG_PKG_vdr-plugin-xvdr is not set
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
@@ -712,8 +715,8 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_vdr-zaphistory is not set
 # CONFIG_PKG_vlc is not set
 # CONFIG_PKG_xbmc is not set
-# CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-addon-vuplus is not set
+# CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -1030,6 +1033,7 @@ CONFIG_PKG_usbutils=y
 # CONFIG_PKG_xf86-video-fbdev is not set
 # CONFIG_PKG_xf86-video-glamo is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
+# CONFIG_PKG_xf86-video-imx6 is not set
 # CONFIG_PKG_xf86-video-mach64 is not set
 # CONFIG_PKG_xf86-video-mali is not set
 # CONFIG_PKG_xf86-video-mga is not set
