--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -624,6 +624,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_gst-convenience is not set
 # CONFIG_PKG_gst-ducati is not set
 # CONFIG_PKG_gst-ffmpeg is not set
+# CONFIG_PKG_gst-libav is not set
 # CONFIG_PKG_gst-openmax is not set
 # CONFIG_PKG_gst-plugins-bad is not set
 # CONFIG_PKG_gst-plugins-base is not set
@@ -680,6 +681,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
+# CONFIG_PKG_vdr-plugin-vnsiserver is not set
 # CONFIG_PKG_vdr-plugin-xvdr is not set
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
@@ -707,8 +709,8 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_vdr-zaphistory is not set
 # CONFIG_PKG_vlc is not set
 # CONFIG_PKG_xbmc is not set
-# CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-addon-vuplus is not set
+# CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -1036,6 +1038,7 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_xf86-video-glint is not set
 # CONFIG_PKG_xf86-video-i740 is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
+# CONFIG_PKG_xf86-video-imx6 is not set
 # CONFIG_PKG_xf86-video-intel is not set
 # CONFIG_PKG_xf86-video-mach64 is not set
 # CONFIG_PKG_xf86-video-mga is not set
