--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -697,6 +697,7 @@ CONFIG_OPT_freevo_lirc=y
 # CONFIG_PKG_gst-convenience is not set
 # CONFIG_PKG_gst-ducati is not set
 # CONFIG_PKG_gst-ffmpeg is not set
+# CONFIG_PKG_gst-libav is not set
 # CONFIG_PKG_gst-openmax is not set
 # CONFIG_PKG_gst-plugins-bad is not set
 # CONFIG_PKG_gst-plugins-base is not set
@@ -755,6 +756,7 @@ CONFIG_PKG_livepause=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
+# CONFIG_PKG_vdr-plugin-vnsiserver is not set
 # CONFIG_PKG_vdr-plugin-xvdr is not set
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
@@ -782,8 +784,8 @@ CONFIG_PKG_livepause=y
 # CONFIG_PKG_vdr-zaphistory is not set
 # CONFIG_PKG_vlc is not set
 # CONFIG_PKG_xbmc is not set
-# CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-addon-vuplus is not set
+# CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -1121,6 +1123,7 @@ CONFIG_PKG_xf86-video-fbdev=y
 # CONFIG_PKG_xf86-video-glint is not set
 # CONFIG_PKG_xf86-video-i740 is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
+# CONFIG_PKG_xf86-video-imx6 is not set
 CONFIG_PKG_xf86-video-intel=y
 # CONFIG_PKG_xf86-video-mach64 is not set
 CONFIG_PKG_xf86-video-mga=y
