--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -664,6 +664,7 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_gst-dsp is not set
 # CONFIG_PKG_gst-ducati is not set
 # CONFIG_PKG_gst-ffmpeg is not set
+# CONFIG_PKG_gst-libav is not set
 # CONFIG_PKG_gst-omapfb is not set
 # CONFIG_PKG_gst-openmax is not set
 # CONFIG_PKG_gst-plugins-bad is not set
@@ -1109,6 +1110,7 @@ CONFIG_PKG_xf86-video-dove=y
 # CONFIG_PKG_xf86-video-fbdev is not set
 # CONFIG_PKG_xf86-video-glamo is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
+# CONFIG_PKG_xf86-video-imx6 is not set
 # CONFIG_PKG_xf86-video-mach64 is not set
 # CONFIG_PKG_xf86-video-mali is not set
 # CONFIG_PKG_xf86-video-mga is not set
