--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -614,7 +614,7 @@ CONFIG_PKG_sqlite=y
 # CONFIG_PKG_sysfsutils is not set
 # CONFIG_PKG_syslink is not set
 # CONFIG_PKG_syslink-d2cmap is not set
-# CONFIG_PKG_taglib is not set
+CONFIG_PKG_taglib=y
 CONFIG_PKG_talloc=y
 # CONFIG_PKG_telepathy-farsight is not set
 # CONFIG_PKG_telepathy-gabble is not set
@@ -686,6 +686,7 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_gst-convenience is not set
 # CONFIG_PKG_gst-ducati is not set
 # CONFIG_PKG_gst-ffmpeg is not set
+# CONFIG_PKG_gst-libav is not set
 # CONFIG_PKG_gst-openmax is not set
 # CONFIG_PKG_gst-plugins-bad is not set
 # CONFIG_PKG_gst-plugins-base is not set
@@ -747,6 +748,7 @@ CONFIG_PKG_vdr-dynamite=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
+CONFIG_PKG_vdr-plugin-vnsiserver=y
 CONFIG_PKG_vdr-plugin-xvdr=y
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
@@ -803,8 +805,8 @@ CONFIG_OPT_xbmc_screensavers=y
 CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
-CONFIG_PKG_xbmc-addon-xvdr=y
 CONFIG_PKG_xbmc-addon-vuplus=y
+CONFIG_PKG_xbmc-addon-xvdr=y
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -1141,6 +1143,7 @@ CONFIG_PKG_xf86-video-fglrx=m
 # CONFIG_PKG_xf86-video-glint is not set
 # CONFIG_PKG_xf86-video-i740 is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
+# CONFIG_PKG_xf86-video-imx6 is not set
 CONFIG_PKG_xf86-video-intel=y
 # CONFIG_PKG_xf86-video-mach64 is not set
 CONFIG_PKG_xf86-video-mga=y
