--- a/config/defconfigs/geexbox-xbmc-omap3-igepv2.conf
+++ b/config/defconfigs/geexbox-xbmc-omap3-igepv2.conf
@@ -238,7 +238,7 @@ CONFIG_AUTOMOUNTER_NFS=y
 # CONFIG_PKG_debug is not set
 # CONFIG_PKG_dietsplash is not set
 # CONFIG_PKG_ndiswrapper-tool is not set
-# CONFIG_PKG_nvram-wakeup is not set
+CONFIG_PKG_nvram-wakeup=y
 CONFIG_PKG_opkg=y
 # CONFIG_PKG_pcmciautils is not set
 # CONFIG_PKG_plymouth-lite is not set
@@ -593,7 +593,7 @@ CONFIG_PKG_sqlite=y
 # CONFIG_PKG_sysfsutils is not set
 # CONFIG_PKG_syslink is not set
 # CONFIG_PKG_syslink-d2cmap is not set
-# CONFIG_PKG_taglib is not set
+CONFIG_PKG_taglib=y
 CONFIG_PKG_talloc=y
 # CONFIG_PKG_tegra-gl is not set
 # CONFIG_PKG_tegra-libs is not set
@@ -668,6 +668,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_gst-dsp is not set
 # CONFIG_PKG_gst-ducati is not set
 # CONFIG_PKG_gst-ffmpeg is not set
+# CONFIG_PKG_gst-libav is not set
 # CONFIG_PKG_gst-omapfb is not set
 # CONFIG_PKG_gst-openmax is not set
 # CONFIG_PKG_gst-plugins-bad is not set
@@ -710,7 +711,7 @@ CONFIG_OPT_sgx530OpenGLES_devtools=y
 # CONFIG_PKG_ti-omap3-omxil is not set
 # CONFIG_PKG_ti-omap4-domx is not set
 # CONFIG_PKG_tvheadend is not set
-# CONFIG_PKG_vdr is not set
+CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
 # CONFIG_PKG_vdr-dummydevice is not set
@@ -733,6 +734,7 @@ CONFIG_OPT_sgx530OpenGLES_devtools=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
+CONFIG_PKG_vdr-plugin-vnsiserver=y
 # CONFIG_PKG_vdr-plugin-xvdr is not set
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
@@ -787,8 +789,8 @@ CONFIG_OPT_xbmc_nonfree=y
 CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
-# CONFIG_PKG_xbmc-addon-xvdr is not set
 CONFIG_PKG_xbmc-addon-vuplus=y
+# CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -962,7 +964,7 @@ CONFIG_OPT_dbus_xorg=y
 CONFIG_PKG_eglibc=y
 # CONFIG_OPT_eglibc_devtools is not set
 # CONFIG_OPT_eglibc_ipv6 is not set
-# CONFIG_PKG_eglibc-gconv-extra is not set
+CONFIG_PKG_eglibc-gconv-extra=y
 CONFIG_PKG_eglibc-gconv-minimal=y
 # CONFIG_PKG_eglibc-gdb is not set
 CONFIG_PKG_eglibc-network=y
@@ -1109,6 +1111,7 @@ CONFIG_PKG_xf86-input-evdev=y
 CONFIG_PKG_xf86-video-fbdev=y
 # CONFIG_PKG_xf86-video-glamo is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
+# CONFIG_PKG_xf86-video-imx6 is not set
 # CONFIG_PKG_xf86-video-mach64 is not set
 # CONFIG_PKG_xf86-video-mali is not set
 # CONFIG_PKG_xf86-video-mga is not set
