--- a/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
@@ -231,7 +231,7 @@ CONFIG_AUTOMOUNTER_NFS=y
 # CONFIG_PKG_debug is not set
 # CONFIG_PKG_dietsplash is not set
 # CONFIG_PKG_ndiswrapper-tool is not set
-# CONFIG_PKG_nvram-wakeup is not set
+CONFIG_PKG_nvram-wakeup=y
 CONFIG_PKG_opkg=y
 # CONFIG_PKG_pcmciautils is not set
 # CONFIG_PKG_plymouth-lite is not set
@@ -586,7 +586,7 @@ CONFIG_PKG_sqlite=y
 # CONFIG_PKG_sysfsutils is not set
 # CONFIG_PKG_syslink is not set
 # CONFIG_PKG_syslink-d2cmap is not set
-# CONFIG_PKG_taglib is not set
+CONFIG_PKG_taglib=y
 CONFIG_PKG_talloc=y
 CONFIG_PKG_tegra-gl=y
 CONFIG_PKG_tegra-libs=y
@@ -661,6 +661,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_gst-dsp is not set
 # CONFIG_PKG_gst-ducati is not set
 # CONFIG_PKG_gst-ffmpeg is not set
+# CONFIG_PKG_gst-libav is not set
 # CONFIG_PKG_gst-omapfb is not set
 # CONFIG_PKG_gst-openmax is not set
 # CONFIG_PKG_gst-plugins-bad is not set
@@ -703,7 +704,7 @@ CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_ti-omap4-domx is not set
 CONFIG_PKG_tvheadend=y
 CONFIG_OPT_tvheadend_zeroconf=y
-# CONFIG_PKG_vdr is not set
+CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
 # CONFIG_PKG_vdr-dummydevice is not set
@@ -726,6 +727,7 @@ CONFIG_OPT_tvheadend_zeroconf=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
+CONFIG_PKG_vdr-plugin-vnsiserver=y
 # CONFIG_PKG_vdr-plugin-xvdr is not set
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
@@ -780,8 +782,8 @@ CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
-# CONFIG_PKG_xbmc-addon-xvdr is not set
 CONFIG_PKG_xbmc-addon-vuplus=y
+# CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -955,7 +957,7 @@ CONFIG_OPT_dbus_xorg=y
 CONFIG_PKG_eglibc=y
 # CONFIG_OPT_eglibc_devtools is not set
 # CONFIG_OPT_eglibc_ipv6 is not set
-# CONFIG_PKG_eglibc-gconv-extra is not set
+CONFIG_PKG_eglibc-gconv-extra=y
 CONFIG_PKG_eglibc-gconv-minimal=y
 # CONFIG_PKG_eglibc-gdb is not set
 CONFIG_PKG_eglibc-network=y
@@ -1101,6 +1103,7 @@ CONFIG_PKG_xf86-input-evdev=y
 CONFIG_PKG_xf86-video-fbdev=y
 # CONFIG_PKG_xf86-video-glamo is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
+# CONFIG_PKG_xf86-video-imx6 is not set
 # CONFIG_PKG_xf86-video-mach64 is not set
 # CONFIG_PKG_xf86-video-mali is not set
 # CONFIG_PKG_xf86-video-mga is not set
