--- a/config/defconfigs/base-armada5xx-cubox.conf
+++ b/config/defconfigs/base-armada5xx-cubox.conf
@@ -212,7 +212,7 @@ CONFIG_OPT_TELNET_SERVER=y
 # CONFIG_PKG_debug is not set
 # CONFIG_PKG_dietsplash is not set
 # CONFIG_PKG_ndiswrapper-tool is not set
-# CONFIG_PKG_nvram-wakeup is not set
+CONFIG_PKG_nvram-wakeup=y
 CONFIG_PKG_opkg=y
 # CONFIG_PKG_pcmciautils is not set
 # CONFIG_PKG_plymouth-lite is not set
@@ -362,7 +362,7 @@ CONFIG_PKG_attr=y
 # CONFIG_PKG_bc is not set
 # CONFIG_PKG_beecrypt is not set
 # CONFIG_PKG_boost is not set
-# CONFIG_PKG_bzip2 is not set
+CONFIG_PKG_bzip2=y
 # CONFIG_PKG_cairo is not set
 # CONFIG_PKG_cdparanoia is not set
 # CONFIG_PKG_clutter is not set
@@ -394,8 +394,8 @@ CONFIG_PKG_expat=y
 # CONFIG_PKG_fftw is not set
 # CONFIG_PKG_fftw2 is not set
 CONFIG_PKG_flac=m
-# CONFIG_PKG_fontconfig is not set
-# CONFIG_PKG_freetype is not set
+CONFIG_PKG_fontconfig=y
+CONFIG_PKG_freetype=y
 # CONFIG_PKG_fribidi is not set
 # CONFIG_PKG_ftgl is not set
 # CONFIG_PKG_gdbm is not set
@@ -460,7 +460,7 @@ CONFIG_PKG_libgles-gc=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
-# CONFIG_PKG_libjpeg-turbo is not set
+CONFIG_PKG_libjpeg-turbo=y
 # CONFIG_PKG_liblockdev is not set
 CONFIG_PKG_libmad=m
 # CONFIG_PKG_libmicrohttpd is not set
@@ -510,7 +510,7 @@ CONFIG_PKG_libusb-compat=y
 CONFIG_PKG_libvorbis=m
 # CONFIG_PKG_libxdg-basedir is not set
 # CONFIG_PKG_libxml is not set
-# CONFIG_PKG_libxml2 is not set
+CONFIG_PKG_libxml2=y
 # CONFIG_PKG_libxslt is not set
 # CONFIG_PKG_libyaml is not set
 # CONFIG_PKG_libz160 is not set
@@ -623,6 +623,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_gst-dsp is not set
 # CONFIG_PKG_gst-ducati is not set
 # CONFIG_PKG_gst-ffmpeg is not set
+# CONFIG_PKG_gst-libav is not set
 # CONFIG_PKG_gst-omapfb is not set
 # CONFIG_PKG_gst-openmax is not set
 # CONFIG_PKG_gst-plugins-bad is not set
@@ -663,7 +664,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_ti-omap3-omxil is not set
 # CONFIG_PKG_ti-omap4-domx is not set
 # CONFIG_PKG_tvheadend is not set
-# CONFIG_PKG_vdr is not set
+CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
 # CONFIG_PKG_vdr-dummydevice is not set
@@ -686,6 +687,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
+CONFIG_PKG_vdr-plugin-vnsiserver=y
 # CONFIG_PKG_vdr-plugin-xvdr is not set
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
@@ -713,8 +715,8 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_vdr-zaphistory is not set
 # CONFIG_PKG_vlc is not set
 # CONFIG_PKG_xbmc is not set
-# CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-addon-vuplus is not set
+# CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -884,7 +886,7 @@ CONFIG_PKG_dbus=y
 CONFIG_PKG_eglibc=y
 CONFIG_OPT_eglibc_devtools=y
 CONFIG_OPT_eglibc_ipv6=y
-# CONFIG_PKG_eglibc-gconv-extra is not set
+CONFIG_PKG_eglibc-gconv-extra=y
 # CONFIG_PKG_eglibc-gconv-minimal is not set
 # CONFIG_PKG_eglibc-gdb is not set
 CONFIG_PKG_eglibc-network=y
@@ -1028,6 +1030,7 @@ CONFIG_PKG_usbutils=y
 # CONFIG_PKG_xf86-video-fbdev is not set
 # CONFIG_PKG_xf86-video-glamo is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
+# CONFIG_PKG_xf86-video-imx6 is not set
 # CONFIG_PKG_xf86-video-mach64 is not set
 # CONFIG_PKG_xf86-video-mali is not set
 # CONFIG_PKG_xf86-video-mga is not set
