--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -596,7 +596,7 @@ CONFIG_PKG_sqlite=y
 # CONFIG_PKG_sysfsutils is not set
 # CONFIG_PKG_syslink is not set
 # CONFIG_PKG_syslink-d2cmap is not set
-# CONFIG_PKG_taglib is not set
+CONFIG_PKG_taglib=y
 CONFIG_PKG_talloc=y
 # CONFIG_PKG_tegra-gl is not set
 # CONFIG_PKG_tegra-libs is not set
@@ -678,6 +678,7 @@ CONFIG_OPT_GStreamer_ducati=y
 # CONFIG_PKG_gst-dsp is not set
 CONFIG_PKG_gst-ducati=y
 CONFIG_PKG_gst-ffmpeg=y
+CONFIG_PKG_gst-libav=y
 # CONFIG_PKG_gst-omapfb is not set
 # CONFIG_PKG_gst-openmax is not set
 CONFIG_PKG_gst-plugins-bad=y
@@ -752,6 +753,7 @@ CONFIG_PKG_vdr-dynamite=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
+CONFIG_PKG_vdr-plugin-vnsiserver=y
 CONFIG_PKG_vdr-plugin-xvdr=y
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
@@ -806,8 +808,8 @@ CONFIG_OPT_xbmc_gstreamer=y
 CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
-CONFIG_PKG_xbmc-addon-xvdr=y
 CONFIG_PKG_xbmc-addon-vuplus=y
+CONFIG_PKG_xbmc-addon-xvdr=y
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -1128,6 +1130,7 @@ CONFIG_PKG_xf86-input-evdev=y
 CONFIG_PKG_xf86-video-fbdev=y
 # CONFIG_PKG_xf86-video-glamo is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
+# CONFIG_PKG_xf86-video-imx6 is not set
 # CONFIG_PKG_xf86-video-mach64 is not set
 # CONFIG_PKG_xf86-video-mali is not set
 # CONFIG_PKG_xf86-video-mga is not set
