--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -695,9 +695,7 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_gst-plugins-ugly is not set
 # CONFIG_PKG_gst-vaapi is not set
 # CONFIG_PKG_gstreamer is not set
-CONFIG_PKG_libav=y
-CONFIG_OPT_libav_vdpau=y
-CONFIG_OPT_libav_vaapi=y
+# CONFIG_PKG_libav is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_libdce is not set
@@ -792,7 +790,7 @@ CONFIG_OPT_xbmc_bluray=y
 CONFIG_OPT_xbmc_rtmp=y
 CONFIG_OPT_xbmc_nonfree=y
 # CONFIG_OPT_xbmc_externalffmpeg is not set
-CONFIG_OPT_xbmc_externalffmpeglibav=y
+# CONFIG_OPT_xbmc_externalffmpeglibav is not set
 CONFIG_OPT_xbmc_pvr=y
 CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_libcec=y
