gstreamer : don't force version to 1.0

--- a/packages/gstreamer/build
+++ b/packages/gstreamer/build
@@ -22,5 +22,13 @@ do_configure \
 make
 make_install
 
+if [ "$TARGET_MACHINE" = "pandaboard" ] ; then 
+  echo "0.10" > $ROOT/$TOOLCHAIN/gstversion
+else 
+  echo "1.0" > $ROOT/$TOOLCHAIN/gstversion
+fi
+
+GST_VERSION=`cat $ROOT/$TOOLCHAIN/gstversion`
+echo $GST_VERSION
 sed -i "s%^pluginsdir=.*%pluginsdir=/usr/lib/gstreamer-$GST_VERSION%" \
   .install/usr/lib/pkgconfig/gstreamer-${GST_VERSION}.pc
