taglib : fix taglib.pc

--- a/packages/taglib/build
+++ b/packages/taglib/build
@@ -15,5 +15,20 @@ cmake  \
 
 make
 make_install
+
 [ -d .install/usr/lib32 ] && mv .install/usr/lib32 .install/usr/lib
+cat > .install/usr/lib/pkgconfig/taglib.pc << EOF
+prefix=$LIB_PREFIX
+exec_prefix=$LIB_PREFIX
+libdir=$LIB_PREFIX/lib
+includedir=$LIB_PREFIX/include
+
+Name: TagLib
+Description: Audio meta-data library
+Requires: 
+Version: 1.8.0
+Libs: -L$LIB_PREFIX/lib -ltag
+Cflags: -I$LIB_PREFIX/include/taglib 
+EOF
+
 sed -i "s:\(['= ]\)/usr:\\1$LIB_PREFIX:g" .install/usr/bin/taglib-config
