refresh defconfig files

--- a/config/defconfigs/base-imx6-sabrelite.conf
+++ b/config/defconfigs/base-imx6-sabrelite.conf
@@ -480,6 +480,7 @@ CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libogg is not set
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libosip2 is not set
+# CONFIG_PKG_libpar2 is not set
 # CONFIG_PKG_libpbc is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
@@ -594,6 +595,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
+# CONFIG_PKG_nzbget is not set
 # CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
@@ -635,6 +637,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_gstreamer is not set
 # CONFIG_PKG_libav is not set
 # CONFIG_PKG_libbluray is not set
+# CONFIG_PKG_libdca is not set
 # CONFIG_PKG_libdce is not set
 # CONFIG_PKG_libdvdcss is not set
 # CONFIG_PKG_libomxil-bellagio is not set
@@ -958,6 +961,7 @@ CONFIG_PKG_dialog=y
 # CONFIG_PKG_joystick is not set
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
+# CONFIG_PKG_mc is not set
 CONFIG_PKG_nano=y
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
