--- a/config/defconfigs/geexbox-xbmc-imx6-sabrelite.conf
+++ b/config/defconfigs/geexbox-xbmc-imx6-sabrelite.conf
@@ -515,6 +515,7 @@ CONFIG_PKG_libnl=y
 CONFIG_PKG_libogg=y
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libosip2 is not set
+CONFIG_PKG_libpar2=m
 # CONFIG_PKG_libpbc is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
@@ -529,7 +530,7 @@ CONFIG_PKG_libpng=y
 CONFIG_PKG_libsamplerate=y
 # CONFIG_PKG_libshairport is not set
 # CONFIG_PKG_libshout is not set
-# CONFIG_PKG_libsigc is not set
+CONFIG_PKG_libsigc=m
 CONFIG_PKG_libsmbclient=y
 # CONFIG_PKG_libsndfile is not set
 # CONFIG_PKG_libsoup is not set
@@ -637,6 +638,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
+CONFIG_PKG_nzbget=m
 # CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
@@ -660,6 +662,8 @@ CONFIG_OPT_GStreamer_xorg=y
 # CONFIG_OPT_GStreamer_openmax is not set
 # CONFIG_OPT_GStreamer_vaapi is not set
 # CONFIG_OPT_GStreamer_crystalhd is not set
+# CONFIG_OPT_GStreamer_ffmpeg is not set
+CONFIG_OPT_GStreamer_libav=y
 # CONFIG_PKG_MPlayer is not set
 # CONFIG_PKG_dvbstreamer is not set
 # CONFIG_PKG_enna is not set
@@ -693,6 +697,7 @@ CONFIG_PKG_libav=y
 # CONFIG_OPT_libav_vaapi is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
+CONFIG_PKG_libdca=y
 # CONFIG_PKG_libdce is not set
 CONFIG_PKG_libdvdcss=y
 # CONFIG_PKG_libomxil-bellagio is not set
@@ -1044,6 +1049,7 @@ CONFIG_PKG_extra-fonts-nonfree=y
 # CONFIG_PKG_joystick is not set
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
+CONFIG_PKG_mc=m
 # CONFIG_PKG_nano is not set
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
