--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -419,6 +419,7 @@ CONFIG_PKG_libffi=y
 # CONFIG_PKG_libogg is not set
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libosip2 is not set
+# CONFIG_PKG_libpar2 is not set
 # CONFIG_PKG_libpbc is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
@@ -528,6 +529,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
+# CONFIG_PKG_nzbget is not set
 # CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
@@ -569,6 +571,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_gstreamer is not set
 # CONFIG_PKG_libav is not set
 # CONFIG_PKG_libbluray is not set
+# CONFIG_PKG_libdca is not set
 # CONFIG_PKG_libdce is not set
 # CONFIG_PKG_libdvdcss is not set
 # CONFIG_PKG_libomxil-bellagio is not set
@@ -887,6 +890,7 @@ CONFIG_PKG_util-linux-ng=y
 # CONFIG_PKG_joystick is not set
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
+# CONFIG_PKG_mc is not set
 # CONFIG_PKG_nano is not set
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
