--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -520,6 +520,7 @@ CONFIG_PKG_libnl=y
 CONFIG_PKG_libogg=y
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libosip2 is not set
+CONFIG_PKG_libpar2=m
 # CONFIG_PKG_libpbc is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
@@ -642,6 +643,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
+CONFIG_PKG_nzbget=m
 # CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
@@ -666,6 +668,8 @@ CONFIG_OPT_GStreamer_xorg=y
 # CONFIG_OPT_GStreamer_vaapi is not set
 CONFIG_OPT_GStreamer_ducati=y
 # CONFIG_OPT_GStreamer_crystalhd is not set
+CONFIG_OPT_GStreamer_ffmpeg=y
+# CONFIG_OPT_GStreamer_libav is not set
 # CONFIG_PKG_MPlayer is not set
 # CONFIG_PKG_dvbstreamer is not set
 # CONFIG_PKG_enna is not set
@@ -699,6 +703,7 @@ CONFIG_PKG_libav=y
 # CONFIG_OPT_libav_vaapi is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
+CONFIG_PKG_libdca=y
 CONFIG_PKG_libdce=y
 CONFIG_PKG_libdvdcss=y
 # CONFIG_PKG_libomxil-bellagio is not set
@@ -1053,6 +1058,7 @@ CONFIG_PKG_extra-fonts-nonfree=y
 # CONFIG_PKG_joystick is not set
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
+CONFIG_PKG_mc=m
 # CONFIG_PKG_nano is not set
 CONFIG_PKG_omapdrmtest=y
 # CONFIG_PKG_oprofile is not set
