--- a/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
@@ -509,6 +509,7 @@ CONFIG_PKG_libnl=y
 CONFIG_PKG_libogg=y
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libosip2 is not set
+CONFIG_PKG_libpar2=m
 # CONFIG_PKG_libpbc is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
@@ -630,6 +631,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
+CONFIG_PKG_nzbget=m
 # CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
@@ -672,6 +674,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_libav is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
+# CONFIG_PKG_libdca is not set
 # CONFIG_PKG_libdce is not set
 # CONFIG_PKG_libdvdcss is not set
 # CONFIG_PKG_libomxil-bellagio is not set
@@ -1023,6 +1026,7 @@ CONFIG_PKG_util-linux-ng=y
 # CONFIG_PKG_joystick is not set
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
+CONFIG_PKG_mc=m
 # CONFIG_PKG_nano is not set
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
