--- a/config/defconfigs/geexbox-xbmc-ux500-snowball-v5.conf
+++ b/config/defconfigs/geexbox-xbmc-ux500-snowball-v5.conf
@@ -511,6 +511,7 @@ CONFIG_PKG_libnl=y
 CONFIG_PKG_libogg=y
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libosip2 is not set
+CONFIG_PKG_libpar2=m
 # CONFIG_PKG_libpbc is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
@@ -632,6 +633,7 @@ CONFIG_PKG_hdmiservice=y
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
+CONFIG_PKG_nzbget=m
 # CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
@@ -675,6 +677,7 @@ CONFIG_PKG_libav=y
 # CONFIG_OPT_libav_vaapi is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
+# CONFIG_PKG_libdca is not set
 # CONFIG_PKG_libdce is not set
 # CONFIG_PKG_libdvdcss is not set
 # CONFIG_PKG_libomxil-bellagio is not set
@@ -1028,6 +1031,7 @@ CONFIG_PKG_util-linux-ng=y
 # CONFIG_PKG_joystick is not set
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
+CONFIG_PKG_mc=m
 # CONFIG_PKG_nano is not set
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
