--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -682,7 +682,7 @@ CONFIG_OPT_GStreamer_ffmpeg=y
 # CONFIG_PKG_gst-dsp is not set
 CONFIG_PKG_gst-ducati=y
 CONFIG_PKG_gst-ffmpeg=y
-CONFIG_PKG_gst-libav=y
+# CONFIG_PKG_gst-libav is not set
 # CONFIG_PKG_gst-omapfb is not set
 # CONFIG_PKG_gst-openmax is not set
 CONFIG_PKG_gst-plugins-bad=y
