Build libcec 2.0.2 with Cubox support

--- a/packages/libcec/build
+++ b/packages/libcec/build
@@ -6,7 +6,11 @@ get_meta $1
 cd $PKG_BUILD_DIR
 
 autoreconf -vif
-do_configure
+
+if [ "$TARGET_MACHINE" = cubox ]
+  then do_configure --enable-cubox --with-tda995x-toolkit-path=$(kernel_path)/drivers/video/dovefb/nxp_hdmi
+  else do_configure
+fi
 
 make
 make_install
