libcec: cleanup build script

--- a/packages/libcec/build
+++ b/packages/libcec/build
@@ -5,12 +5,15 @@ get_meta $1
 
 cd $PKG_BUILD_DIR
 
-autoreconf -vif
+do_autoconf
 
-if [ "$TARGET_MACHINE" = cubox ]
-  then do_configure --enable-cubox --with-tda995x-toolkit-path=$(kernel_path)/drivers/video/dovefb/nxp_hdmi
-  else do_configure
+if [ "$TARGET_MACHINE" = cubox ]; then
+  CUBOX_FLAGS="--enable-cubox --with-tda995x-toolkit-path=$(kernel_path)/drivers/video/dovefb/nxp_hdmi"
+else
+  CUBOX_FLAGS="--disable-cubox"
 fi
+
+do_configure $CUBOX_FLAGS
 
 make
 make_install
