libxcb : update to 1.9

--- a/packages/libxcb/build
+++ b/packages/libxcb/build
@@ -1,6 +1,7 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
 xcb_configure () {
   do_configure $2 \
@@ -39,7 +40,7 @@ xcb_build () {
   cd ..
 }
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
 
 xcb_build $1 host toolchain
 xcb_build $1 target
