--- a/packages/curl/build
+++ b/packages/curl/build
@@ -1,8 +1,10 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
+
 do_configure \
             --disable-debug \
             --enable-http \
