--- a/packages/alsa-utils/build
+++ b/packages/alsa-utils/build
@@ -1,8 +1,9 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
 
 if pkg_uses $1 devtools; then
   DEVTOOLS_CONFIG="--enable-alsamixer --with-curses=ncurses"
