--- a/packages/alsa-lib/build
+++ b/packages/alsa-lib/build
@@ -1,10 +1,12 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 export CFLAGS="$CFLAGS -D_FILE_OFFSET_BITS=32 -fPIC -DPIC"
 
-cd $BUILD/$1*
 do_configure \
             --with-plugindir=/usr/lib/alsa \
             --with-debug=no \
