firmware-arm-ipu-dce: build script cleanup

--- a/packages/firmware-arm-ipu-dce/build
+++ b/packages/firmware-arm-ipu-dce/build
@@ -9,8 +9,5 @@ install_dir="$PWD/.install"
 rm -rf "$install_dir"
 mkdir -p "$install_dir/firmware"
 
-cp -P *.xem3 "$install_dir/firmware"
-#cp -P *.xe64T "$install_dir/firmware"
-
+cp -P ti-firmware-ipu-dce.xem3 "$install_dir/firmware"
 ln -sf ti-firmware-ipu-dce.xem3  $install_dir/firmware/ducati-m3-core0.xem3
-#ln -sf test_omx_dsp.xe64T $install_dir/firmware/tesla-dsp.xe64T
