defconfigs: drop old syslink firmwares from geexbox-xbmc-omap4-pandaboard

--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -284,9 +284,8 @@ CONFIG_PKG_parted=y
 # CONFIG_PKG_firmware-arm-imx6 is not set
 CONFIG_PKG_firmware-arm-ipu-dce=y
 # CONFIG_PKG_firmware-arm-raspberrypi is not set
-CONFIG_PKG_firmware-arm-syslink-ipc=y
-CONFIG_OPT_firmwarearmsyslinkipc_devtools=y
-CONFIG_PKG_firmware-arm-syslink-mm=y
+# CONFIG_PKG_firmware-arm-syslink-ipc is not set
+# CONFIG_PKG_firmware-arm-syslink-mm is not set
 CONFIG_PKG_firmware-arm-wl1271=y
 CONFIG_PKG_firmware-bluetooth-bluez=y
 CONFIG_PKG_firmware-dvb-af9015=y
