geexbox-xbmc-imx5x-efikamx : remove sgx540-OMAP44xx-drv

--- a/config/defconfigs/geexbox-xbmc-imx5x-efikamx.conf
+++ b/config/defconfigs/geexbox-xbmc-imx5x-efikamx.conf
@@ -248,7 +248,7 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_sgx530-OMAP34xx-drv is not set
-CONFIG_PKG_sgx540-OMAP44xx-drv=y
+# CONFIG_PKG_sgx540-OMAP44xx-drv is not set
 # CONFIG_PKG_tibtfm-wl1271 is not set
 
 #
