--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -273,6 +273,7 @@ CONFIG_PKG_appleir=y
 CONFIG_PKG_cryptodev=y
 CONFIG_PKG_crystalhd=y
 # CONFIG_PKG_cwiid is not set
+CONFIG_PKG_drivers-jmicron-ethernet=m
 # CONFIG_PKG_eventlircd is not set
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
@@ -787,6 +788,8 @@ CONFIG_PKG_livepause=y
 # CONFIG_PKG_vdr-zaphistory is not set
 # CONFIG_PKG_vlc is not set
 # CONFIG_PKG_xbmc is not set
+# CONFIG_PKG_xbmc-addon-bluecop is not set
+# CONFIG_PKG_xbmc-addon-navi-x is not set
 # CONFIG_PKG_xbmc-addon-vuplus is not set
 # CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
@@ -1048,6 +1051,7 @@ CONFIG_OPT_dialog_xdialog=y
 # CONFIG_PKG_lsof is not set
 # CONFIG_PKG_mc is not set
 # CONFIG_PKG_nano is not set
+# CONFIG_PKG_omapconf is not set
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
@@ -1061,10 +1065,8 @@ CONFIG_OPT_usbutils_devtools=y
 CONFIG_PKG_vdpauinfo=y
 # CONFIG_PKG_wget is not set
 CONFIG_PKG_wscan=y
-# CONFIG_PKG_xbmc-addon-bluecop is not set
 # CONFIG_PKG_xbmc-addon-geexbox-network is not set
 # CONFIG_PKG_xbmc-addon-geexbox-updater is not set
-# CONFIG_PKG_xbmc-addon-navi-x is not set
 # CONFIG_PKG_xdotool is not set
 # CONFIG_PKG_xvattr is not set
 
