--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -258,6 +258,7 @@ CONFIG_PKG_appleir=y
 CONFIG_PKG_cryptodev=y
 CONFIG_PKG_crystalhd=y
 # CONFIG_PKG_cwiid is not set
+CONFIG_PKG_drivers-jmicron-ethernet=m
 CONFIG_PKG_eventlircd=y
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
@@ -787,6 +788,8 @@ CONFIG_OPT_xbmc_screensavers=y
 CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
+CONFIG_PKG_xbmc-addon-bluecop=y
+CONFIG_PKG_xbmc-addon-navi-x=y
 CONFIG_PKG_xbmc-addon-vuplus=y
 CONFIG_PKG_xbmc-addon-xvdr=y
 # CONFIG_PKG_xbmc-pvr-addons is not set
@@ -1047,6 +1050,7 @@ CONFIG_PKG_extra-fonts-nonfree=y
 CONFIG_PKG_lsof=y
 CONFIG_PKG_mc=m
 CONFIG_PKG_nano=y
+# CONFIG_PKG_omapconf is not set
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
@@ -1060,10 +1064,8 @@ CONFIG_OPT_usbutils_devtools=y
 CONFIG_PKG_vdpauinfo=y
 # CONFIG_PKG_wget is not set
 CONFIG_PKG_wscan=y
-CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
-CONFIG_PKG_xbmc-addon-navi-x=y
 # CONFIG_PKG_xdotool is not set
 CONFIG_PKG_xvattr=m
 
