--- a/config/defconfigs/base-armada5xx-cubox.conf
+++ b/config/defconfigs/base-armada5xx-cubox.conf
@@ -225,6 +225,7 @@ CONFIG_PKG_opkg=y
 # CONFIG_PKG_ar6k is not set
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
+# CONFIG_PKG_drivers-jmicron-ethernet is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
@@ -718,6 +719,8 @@ CONFIG_PKG_vdr-plugin-vnsiserver=y
 # CONFIG_PKG_vdr-zaphistory is not set
 # CONFIG_PKG_vlc is not set
 # CONFIG_PKG_xbmc is not set
+# CONFIG_PKG_xbmc-addon-bluecop is not set
+# CONFIG_PKG_xbmc-addon-navi-x is not set
 # CONFIG_PKG_xbmc-addon-vuplus is not set
 # CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
@@ -960,6 +963,7 @@ CONFIG_PKG_util-linux-ng=y
 # CONFIG_PKG_lsof is not set
 # CONFIG_PKG_mc is not set
 # CONFIG_PKG_nano is not set
+# CONFIG_PKG_omapconf is not set
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 # CONFIG_PKG_rtmpdump is not set
@@ -974,10 +978,8 @@ CONFIG_PKG_usbutils=y
 # CONFIG_PKG_vdpauinfo is not set
 # CONFIG_PKG_wget is not set
 # CONFIG_PKG_wscan is not set
-# CONFIG_PKG_xbmc-addon-bluecop is not set
 # CONFIG_PKG_xbmc-addon-geexbox-network is not set
 # CONFIG_PKG_xbmc-addon-geexbox-updater is not set
-# CONFIG_PKG_xbmc-addon-navi-x is not set
 # CONFIG_PKG_xdotool is not set
 # CONFIG_PKG_xvattr is not set
 
