--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -242,6 +242,7 @@ CONFIG_PKG_opkg=y
 # CONFIG_PKG_ar6k is not set
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
+# CONFIG_PKG_drivers-jmicron-ethernet is not set
 CONFIG_PKG_eventlircd=y
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
@@ -789,6 +790,8 @@ CONFIG_OPT_xbmc_dove=y
 CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
+CONFIG_PKG_xbmc-addon-bluecop=y
+CONFIG_PKG_xbmc-addon-navi-x=y
 CONFIG_PKG_xbmc-addon-vuplus=y
 # CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
@@ -1038,6 +1041,7 @@ CONFIG_PKG_extra-fonts-nonfree=y
 # CONFIG_PKG_lsof is not set
 CONFIG_PKG_mc=m
 # CONFIG_PKG_nano is not set
+# CONFIG_PKG_omapconf is not set
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
@@ -1052,10 +1056,8 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_vdpauinfo is not set
 # CONFIG_PKG_wget is not set
 # CONFIG_PKG_wscan is not set
-CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
-CONFIG_PKG_xbmc-addon-navi-x=y
 # CONFIG_PKG_xdotool is not set
 # CONFIG_PKG_xvattr is not set
 
