--- a/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
@@ -242,6 +242,7 @@ CONFIG_PKG_opkg=y
 # CONFIG_PKG_ar6k is not set
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
+# CONFIG_PKG_drivers-jmicron-ethernet is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
@@ -782,6 +783,8 @@ CONFIG_OPT_xbmc_nonfree=y
 CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
+# CONFIG_PKG_xbmc-addon-bluecop is not set
+CONFIG_PKG_xbmc-addon-navi-x=y
 CONFIG_PKG_xbmc-addon-vuplus=y
 # CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
@@ -1028,6 +1031,7 @@ CONFIG_PKG_util-linux-ng=y
 # CONFIG_PKG_lsof is not set
 CONFIG_PKG_mc=m
 # CONFIG_PKG_nano is not set
+# CONFIG_PKG_omapconf is not set
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
@@ -1042,10 +1046,8 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_vdpauinfo is not set
 # CONFIG_PKG_wget is not set
 # CONFIG_PKG_wscan is not set
-# CONFIG_PKG_xbmc-addon-bluecop is not set
 # CONFIG_PKG_xbmc-addon-geexbox-network is not set
 # CONFIG_PKG_xbmc-addon-geexbox-updater is not set
-CONFIG_PKG_xbmc-addon-navi-x=y
 # CONFIG_PKG_xdotool is not set
 # CONFIG_PKG_xvattr is not set
 
