--- a/config/defconfigs/geexbox-xbmc-ux500-snowball-v5.conf
+++ b/config/defconfigs/geexbox-xbmc-ux500-snowball-v5.conf
@@ -244,6 +244,7 @@ CONFIG_PKG_opkg=y
 # CONFIG_PKG_ar6k is not set
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
+# CONFIG_PKG_drivers-jmicron-ethernet is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
@@ -785,6 +786,8 @@ CONFIG_OPT_xbmc_libnfs=y
 CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
+CONFIG_PKG_xbmc-addon-bluecop=y
+CONFIG_PKG_xbmc-addon-navi-x=y
 CONFIG_PKG_xbmc-addon-vuplus=y
 # CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
@@ -1033,6 +1036,7 @@ CONFIG_PKG_util-linux-ng=y
 # CONFIG_PKG_lsof is not set
 CONFIG_PKG_mc=m
 # CONFIG_PKG_nano is not set
+# CONFIG_PKG_omapconf is not set
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
@@ -1047,10 +1051,8 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_vdpauinfo is not set
 # CONFIG_PKG_wget is not set
 # CONFIG_PKG_wscan is not set
-CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
-CONFIG_PKG_xbmc-addon-navi-x=y
 # CONFIG_PKG_xdotool is not set
 # CONFIG_PKG_xvattr is not set
 
