mesa: fix build with dynamix sysroot

--- a/packages/mesa/build
+++ b/packages/mesa/build
@@ -47,6 +47,8 @@ builtin_compiler() {
   INTEL_CFLAGS="a" INTEL_LIBS="a" \
   NOUVEAU_CFLAGS="a" NOUVEAU_LIBS="a" \
   RADEON_CFLAGS="a" RADEON_LIBS="a" \
+  GLPROTO_CFLAGS="a" GLPROTO_LIBS="a" \
+  DRI2PROTO_CFLAGS="a" DRI2PROTO_LIBS="a" \
   ./configure \
     --enable-shared \
     --disable-static \
