geexbox-xbmc-tegra2-harmony : remove vdr (need kernel upgrade)

--- a/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
@@ -705,7 +705,7 @@ CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_ti-omap3-omxil is not set
 # CONFIG_PKG_ti-omap4-domx is not set
 # CONFIG_PKG_tvheadend is not set
-CONFIG_PKG_vdr=y
+# CONFIG_PKG_vdr is not set
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
 # CONFIG_PKG_vdr-dummydevice is not set
@@ -728,7 +728,7 @@ CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
-CONFIG_PKG_vdr-plugin-vnsiserver=y
+# CONFIG_PKG_vdr-plugin-vnsiserver is not set
 # CONFIG_PKG_vdr-plugin-xvdr is not set
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
@@ -804,7 +804,7 @@ CONFIG_PKG_bftpd=y
 CONFIG_PKG_connman=y
 CONFIG_OPT_connman_wifi=y
 # CONFIG_OPT_connman_bluetooth is not set
-# CONFIG_PKG_connman-tools is not set
+CONFIG_PKG_connman-tools=y
 # CONFIG_PKG_dropbear is not set
 # CONFIG_PKG_gatling is not set
 # CONFIG_PKG_hostapd is not set
@@ -904,7 +904,7 @@ CONFIG_PKG_wpa-supplicant=y
 CONFIG_PKG_Python=y
 # CONFIG_OPT_Python_openssl is not set
 # CONFIG_PKG_cryptopy is not set
-# CONFIG_PKG_dbus-python is not set
+CONFIG_PKG_dbus-python=y
 # CONFIG_PKG_imdbpy is not set
 # CONFIG_PKG_kaa-base is not set
 # CONFIG_PKG_kaa-display is not set
@@ -917,7 +917,7 @@ CONFIG_PKG_Python=y
 # CONFIG_PKG_python-decorator is not set
 # CONFIG_PKG_python-formencode is not set
 # CONFIG_PKG_python-gdata-client is not set
-# CONFIG_PKG_python-gobject is not set
+CONFIG_PKG_python-gobject=y
 # CONFIG_PKG_python-lxml is not set
 # CONFIG_PKG_python-numeric is not set
 # CONFIG_PKG_python-pil is not set
