geexbox-xbmc-armada5xx-cubox : add connman-tools

--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -811,7 +811,7 @@ CONFIG_PKG_bftpd=y
 CONFIG_PKG_connman=y
 CONFIG_OPT_connman_wifi=y
 # CONFIG_OPT_connman_bluetooth is not set
-# CONFIG_PKG_connman-tools is not set
+CONFIG_PKG_connman-tools=m
 CONFIG_PKG_dropbear=y
 CONFIG_OPT_dropbear_dbclient=y
 CONFIG_OPT_dropbear_scp=y
@@ -913,7 +913,7 @@ CONFIG_PKG_wpa-supplicant=y
 CONFIG_PKG_Python=y
 CONFIG_OPT_Python_openssl=y
 CONFIG_PKG_cryptopy=y
-# CONFIG_PKG_dbus-python is not set
+CONFIG_PKG_dbus-python=m
 # CONFIG_PKG_imdbpy is not set
 # CONFIG_PKG_kaa-base is not set
 # CONFIG_PKG_kaa-display is not set
@@ -926,7 +926,7 @@ CONFIG_PKG_cryptopy=y
 # CONFIG_PKG_python-decorator is not set
 # CONFIG_PKG_python-formencode is not set
 # CONFIG_PKG_python-gdata-client is not set
-# CONFIG_PKG_python-gobject is not set
+CONFIG_PKG_python-gobject=m
 # CONFIG_PKG_python-lxml is not set
 # CONFIG_PKG_python-numeric is not set
 # CONFIG_PKG_python-pil is not set
