cubox boot.cfg: Add support for booting from the USB primary partition

--- a/config/platforms/arm/armada5xx/boot.cfg
+++ b/config/platforms/arm/armada5xx/boot.cfg
@@ -1,15 +1,44 @@
 echo ======== Setting bootargs and loading kernel ========
+setenv boot_found 0
+
 ext4ls mmc 0:2 /
 if itest.s $? -eq 0; then
-   echo "Detected two partitions config (ext2/ext4)"
-   setenv boot_device /dev/mmcblk0p2
-   ext2load mmc 0:1 0x00200000 /uImage
-else
-   echo "Detected one partition config (ext4)"
-   setenv boot_device /dev/mmcblk0p1
-   ext4load mmc 0:1 0x00200000 /boot/uImage
+  echo "Detected two partitions config (ext2/ext4)"
+  setenv boot_device /dev/mmcblk0p2
+  ext2load mmc 0:1 0x00200000 /uImage
+  setenv boot_found 1
 fi
-     
+
+if itest.s $boot_found -eq 0; then
+  ext4ls mmc 0:1 /
+  if itest.s $? -eq 0; then
+    echo "Detected one partition on mmc"
+    setenv boot_device /dev/mmcblk0p1
+    ext4load mmc 0:1 0x00200000 /boot/uImage
+    setenv boot_found 1
+  fi
+fi 
+
+if itest.s $boot_found -eq 0; then
+  ext4ls usb 0:1 /
+  if itest.s $? -eq 0; then
+    echo "Detected partition on usb 0"
+    setenv boot_device /dev/sda1
+    ext4load usb 0:1 0x00200000 /boot/uImage
+    setenv boot_found 1
+  fi
+fi
+
+if itest.s $boot_found -eq 0; then
+  ext4ls usb 1:1 /
+  if itest.s $? -eq 0; then
+    echo "Detected partition on usb 1"
+    setenv boot_device /dev/sdb1
+    ext4load usb 1:1 0x00200000 /boot/uImage
+    setenv boot_found 1
+  fi
+fi
+    
 setenv bootargs console=ttyS0,115200n8 vmalloc=448M root=$boot_device video=dovefb:lcd0:1920x1080-32@60-edid clcd.lcd0_enable=1 clcd.lcd1_enable=0
 echo ======== Booting kernel ========
 bootm
