gcc-core gcc-final: depend on cloog Build with cloog-isl instead the old cloog-ppl

--- a/packages/gcc-final/build
+++ b/packages/gcc-final/build
@@ -71,6 +71,7 @@ cd objdir-$1
              $TLS_CONFIG \
              --disable-nls \
              --disable-ppl-version-check \
+             --enable-cloog-backend=isl \
              $EXTRA_FLAGS
 make
 make_install toolchain
