--- a/packages/gcc-core/build
+++ b/packages/gcc-core/build
@@ -68,6 +68,7 @@ cd objdir-$1
              --disable-decimal-float \
              --disable-nls \
              --disable-ppl-version-check \
+             --enable-cloog-backend=isl \
              $EXTRA_FLAGS
 make all-gcc all-target-libgcc
 
