xbmc-addon-xvdr : update to 0.9.6

--- a/packages/xbmc-addon-xvdr/build
+++ b/packages/xbmc-addon-xvdr/build
@@ -1,9 +1,11 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
-touch NEWS AUTHORS ChangeLog
+cd $PKG_BUILD_DIR
+
+#touch NEWS AUTHORS ChangeLog
 
 do_autoconf
 
@@ -13,5 +15,6 @@ CXXFLAGS="-DZLIB_INTERNAL=1" ./configure --prefix=/usr/share/xbmc \
                                          --build=$HOST_NAME \
                                          --disable-static \
                                          --enable-shared
+
 make
 make_install
