syslinux : update to 4.06

--- a/packages/syslinux/build
+++ b/packages/syslinux/build
@@ -1,13 +1,15 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 export CFLAGS="$CFLAGS -I`ls -d $ROOT/$BUILD/$1*`/libinstaller"
 export CFLAGS="$CFLAGS -I`ls -d $ROOT/$BUILD/$1*`/libfat"
 
 SUBDIRS="codepage core libinstaller mtools mbr extlinux"
 
-cd $BUILD/$1*
 make \
      CC=$CC \
      AR=$AR \
@@ -17,6 +19,7 @@ make \
      BSUBDIRS="$SUBDIRS"
 
 make_install
+
 mkdir -p .install/boot
 cp -P \
   core/isolinux.bin \
