--- a/config/defconfigs/base-armada5xx-cubox.conf
+++ b/config/defconfigs/base-armada5xx-cubox.conf
@@ -909,7 +909,7 @@ CONFIG_PKG_linux=y
 # CONFIG_OPT_linux_dab is not set
 # CONFIG_OPT_linux_dvb is not set
 CONFIG_OPT_linux_ethernet=y
-# CONFIG_OPT_linux_hwmon is not set
+CONFIG_OPT_linux_hwmon=y
 # CONFIG_OPT_linux_gameport is not set
 CONFIG_OPT_linux_ipv6=y
 # CONFIG_OPT_linux_lirc is not set
