--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -923,6 +923,7 @@ CONFIG_PKG_python-decorator=y
 CONFIG_PKG_python-formencode=y
 # CONFIG_PKG_python-gdata-client is not set
 # CONFIG_PKG_python-gobject is not set
+# CONFIG_PKG_python-lsb-release is not set
 CONFIG_PKG_python-lxml=y
 CONFIG_PKG_python-numeric=y
 CONFIG_PKG_python-pil=y
