--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -927,6 +927,7 @@ CONFIG_PKG_dbus-python=m
 # CONFIG_PKG_python-formencode is not set
 # CONFIG_PKG_python-gdata-client is not set
 CONFIG_PKG_python-gobject=m
+CONFIG_PKG_python-lsb-release=y
 # CONFIG_PKG_python-lxml is not set
 # CONFIG_PKG_python-numeric is not set
 # CONFIG_PKG_python-pil is not set
@@ -1049,7 +1050,7 @@ CONFIG_PKG_screen=y
 # CONFIG_PKG_snowball-mactool is not set
 CONFIG_PKG_strace=m
 # CONFIG_PKG_tools-generator is not set
-# CONFIG_PKG_unrar is not set
+CONFIG_PKG_unrar=m
 CONFIG_PKG_usbutils=y
 CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_valgrind is not set
