--- a/config/defconfigs/geexbox-xbmc-imx5x-efikamx.conf
+++ b/config/defconfigs/geexbox-xbmc-imx5x-efikamx.conf
@@ -249,7 +249,7 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_sgx530-OMAP34xx-drv is not set
-# CONFIG_PKG_sgx540-OMAP44xx-drv is not set
+CONFIG_PKG_sgx540-OMAP44xx-drv=y
 # CONFIG_PKG_tibtfm-wl1271 is not set
 
 #
@@ -922,6 +922,7 @@ CONFIG_PKG_Python=y
 # CONFIG_PKG_python-formencode is not set
 # CONFIG_PKG_python-gdata-client is not set
 # CONFIG_PKG_python-gobject is not set
+CONFIG_PKG_python-lsb-release=y
 # CONFIG_PKG_python-lxml is not set
 # CONFIG_PKG_python-numeric is not set
 # CONFIG_PKG_python-pil is not set
