--- a/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
@@ -918,6 +918,7 @@ CONFIG_PKG_dbus-python=y
 # CONFIG_PKG_python-formencode is not set
 # CONFIG_PKG_python-gdata-client is not set
 CONFIG_PKG_python-gobject=y
+CONFIG_PKG_python-lsb-release=y
 # CONFIG_PKG_python-lxml is not set
 # CONFIG_PKG_python-numeric is not set
 # CONFIG_PKG_python-pil is not set
