--- a/config/defconfigs/base-imx6-sabrelite.conf
+++ b/config/defconfigs/base-imx6-sabrelite.conf
@@ -852,6 +852,7 @@ CONFIG_PKG_network-backend=y
 # CONFIG_PKG_python-formencode is not set
 # CONFIG_PKG_python-gdata-client is not set
 # CONFIG_PKG_python-gobject is not set
+# CONFIG_PKG_python-lsb-release is not set
 # CONFIG_PKG_python-lxml is not set
 # CONFIG_PKG_python-numeric is not set
 # CONFIG_PKG_python-pil is not set
