--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -925,6 +925,7 @@ CONFIG_PKG_python-beautifulsoup=y
 # CONFIG_PKG_python-formencode is not set
 # CONFIG_PKG_python-gdata-client is not set
 # CONFIG_PKG_python-gobject is not set
+CONFIG_PKG_python-lsb-release=y
 # CONFIG_PKG_python-lxml is not set
 # CONFIG_PKG_python-numeric is not set
 # CONFIG_PKG_python-pil is not set
